--- a/hackathon2-backend/settings.gradle
+++ b/hackathon2-backend/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'backend-app'
+rootProject.name = 'hackathon2-backend'
 include('app')
